<resources>
    <string name="app_name">ContactApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="full_name">Full Name</string>
    <string name="send_message">Send Message</string>
    <string name="hello">Hello</string>
    <string name="contact_time">Contact Time</string>
    <string name="otp">OTP</string>
</resources>