<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DisplayContact">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center_vertical">
      <com.google.android.material.card.MaterialCardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:backgroundTint="@color/black">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingStart="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullName"
                android:text="@string/full_name"
                style="@style/TextStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contactNum"
                android:text="@string/contact_number"
                style="@style/TextStyle"
                />
         </LinearLayout>
      </com.google.android.material.card.MaterialCardView>

      <Button
          android:id="@+id/sendMessage"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:text="@string/send_message"
          android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
         android:layout_marginStart="64dp"
          android:textSize="24sp"
          android:backgroundTint="@color/black"/>
   </LinearLayout>
</FrameLayout>